fix the issue with incorrect sizing on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -1980,11 +1980,6 @@ svg:hover path {
   font-weight: 700;
   vertical-align: top;
 }
-@media (max-width: 550px) {
-  .cid-cennik .price-figure {
-    font-size: 4.25rem;
-  }
-}
 
 .cid-galeria {
   padding-top: 90px;
